Version 1 of the calculator. Need to fix the screen so numbers dont get out of the screen. Need to add functionality so that several operations can be done at once.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 .calculator {
-    background-color: rgb(56, 56, 56);
+    background-color: rgb(31, 30, 30);
     height: 500px;
     width: 350px;
     border-radius: 10px;
@@ -17,9 +17,10 @@ html {
     background-color: black;
     margin: auto;
     position: relative;
-    top: 10px;
+    top: 20px;
     margin-bottom: 50px;
-    text-align: right;
+    text-align: left;
+    border-radius: 10px;
 }
 
 .buttons {
@@ -32,6 +33,12 @@ html {
     width: 60px;
     margin: 2.5px;
     font-size: 20px;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.button:hover{
+    transform: scale(1.2);
 }
 
 #cero {
@@ -49,14 +56,16 @@ html {
 
 .text {
     color: green;
-    padding-top: 5px;
-    margin-top: 30px;
 }
 
 .operation {
-    font-size: 25px;
+    font-size: 35px;
+    padding: 8px 0 0;
+    margin: 0;
 }
 
 .result {
-    font-size: 40px;
+    font-size: 50px;
+    text-align: right;
+    margin: 6px;
 }
